Dockerfile, docker-compose.yml and postman_collection files where added